--- a/src/app/list-todo/list-todo.component.scss
+++ b/src/app/list-todo/list-todo.component.scss
@@ -73,12 +73,14 @@ $btn-transition: 0.1s ease-in-out;
     width: 68%;
     height: 55%;
     font-size: 1rem;
+    line-height: 1.2rem;
     text-align: center;
     word-wrap: break-word;
     overflow-y: scroll;
-    padding: 0.1rem 0.5rem;
+    padding: 0.5rem 0.5rem;
     margin-bottom: 0.1rem;
-    top: 1.5rem;
+    top: 1.7rem;
+    mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 85%, transparent 100%);
   }
 
   &-date {
@@ -89,7 +91,7 @@ $btn-transition: 0.1s ease-in-out;
     text-align: right;
     text-shadow: 0px 0.5px 0px;
     padding-right: 0.8rem;
-    top: 1.4rem;
+    top: 1.5rem;
   }
 }
 
