--- a/src/app/widget/calendar/calendar.component.scss
+++ b/src/app/widget/calendar/calendar.component.scss
@@ -27,13 +27,14 @@ $highlight-border-radius: 50%;
         line-height: 1.5rem;
         margin: 3rem  auto 0;
         padding: 0;
-        top: -1rem;
         font-size: 1.05rem;
         text-align: left;
+        padding: 0 0.5rem 1rem 0.5rem;
         width: 80%;
         height: 80%;
         overflow-y: scroll;
-        word-break: break-all;
+        word-wrap: break-word;
+        mask-image: linear-gradient(to bottom, transparent 0%, black 4%, black 80%, transparent 100%);
     }
 }
 
